# libstrop

./: .gitignore  BUILD  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  WORKSPACE  build_with_spack_cmake.sh  libstrop.pc.in
src/strings/: Strings.cc  Strings.h  Strings.tcc  Strings_TEST.cc
src/strop/: strop.cc  strop.h  strop.tcc  strop_TEST.cc
test/migrate_test/: test-group1.cpp
